# learn-optix7

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  defines.h.in
src/01-init/: CMakeLists.txt  device_programs.cu  launch_params.h  main.cpp
src/02-ray-payload/: CMakeLists.txt  device_programs.cu  launch_params.h  main.cpp
src/03-sbt-data/: CMakeLists.txt  device_programs.cu  launch_params.h  main.cpp
src/04-multi-object/: CMakeLists.txt  device_programs.cu  launch_params.h  main.cpp
src/05-textures/: CMakeLists.txt  device_programs.cu  launch_params.h  main.cpp
src/06-shadow/: CMakeLists.txt  device_programs.cu  launch_params.h  main.cpp
src/07-soft-shadow/: CMakeLists.txt  device_programs.cu  launch_params.h  main.cpp
src/08-g-buffer/: CMakeLists.txt  device_programs.cu  gbuffer.cpp  gbuffer.h  launch_params.h  main.cpp
src/08-g-buffer/shaders/: gbuffer.frag  gbuffer.vert
src/common/: CMakeLists.txt  cuda_buffer.cpp  cuda_buffer.h  cuda_macro_utils.h  cuda_texture.cpp  cuda_texture.h  frame_counter.cpp  geometry.cpp  geometry.h  gl_utils.cpp  gl_utils.h  light_data.h  lights.cpp  lights.h  pixel_buffer.cpp  pixel_buffer.h  random.h  renderer_base.cpp  renderer_base.h  scene.cpp  scene.h  shader_common.h  texture.h
src/common/math/: vec.h
src/common/shaders/: screen.frag  screen.vert
